--- a/DownloadJpg.html
+++ b/DownloadJpg.html
@@ -47,9 +47,9 @@
   // j處理按鈕點選事件的 jQuery 程式碼
   $(document).ready(function() {
     $("#downloadButton").on("click", function() {
-        //$("#tableContainer").css("display", "inline-block");
+        $("#tableContainer").css("display", "inline-block");
         downloadPng('tableContainer');
-       // $("#tableContainer").css("display", "none");
+        $("#tableContainer").css("display", "none");
     });
   });
 
